--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.hardware.camera" />
@@ -21,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NeWay"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.lgt.NeWay.activity.UploadOtherCertificate.UploadOtherCertificate"></activity>
+        <activity android:name="com.lgt.NeWay.activity.UploadOtherCertificate.UploadOtherCertificate" />
         <activity android:name="com.lgt.NeWay.activity.ActivityChangePassword" />
         <activity android:name="com.lgt.NeWay.activity.UserBatchRequest.UserBatchRequest" />
         <activity android:name="com.lgt.NeWay.activity.WebViewActivity" />
@@ -41,7 +42,8 @@
         <activity android:name="com.lgt.NeWay.activity.Profile" />
         <activity android:name="com.lgt.NeWay.activity.MapActivity" />
         <activity android:name="com.lgt.NeWay.activity.Login" />
-        <activity android:name="com.lgt.NeWay.activity.Splash">
+        <activity android:name="com.lgt.NeWay.activity.Splash"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
